--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt": "~0.4.1",
     "is-running": "~1.0.5",
     "should": "~4.0.4"
+    "mocha": "~1.20.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
