--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt": "~0.4.1",
     "is-running": "~1.0.5",
-    "should": "~4.0.4"
+    "should": "~4.0.4",
     "mocha": "~1.20.1"
   },
   "peerDependencies": {
