--- a/package.json
+++ b/package.json
@@ -28,19 +28,25 @@
     "test": "make tests"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
     "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
     "is-running": "~1.0.5",
+    "mocha": "~1.20.1",
     "should": "~4.0.4",
-    "mocha": "~1.20.1"
+    "sleep": "~1.1.8",
+    "tree-kill": "0.0.6"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
   },
   "keywords": [
-    "gruntplugin", "sinatra", "rack", "server", "ruby"
+    "gruntplugin",
+    "sinatra",
+    "rack",
+    "server",
+    "ruby"
   ],
   "dependencies": {
     "mkdirp": "~0.5.0"
